--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-.DS_Store
+# Python env & cache
+.venv/
 __pycache__/
+src/__pycache__/
 *.pyc
+
+# pytest cache
+.pytest_cache/
+
+# macOS
+.DS_Store
+
+# Excel temporary lock files
+~$*.xlsx
