--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-# Python env & cache
-.venv/
 __pycache__/
-src/__pycache__/
 *.pyc
-
-# pytest cache
-.pytest_cache/
-
-# macOS
+.venv/
 .DS_Store
-
-# Excel temporary lock files
-~$*.xlsx
+.vscode/
